fixed white space mobile view bug

--- a/src/component/Banner/Banner.css
+++ b/src/component/Banner/Banner.css
@@ -5,7 +5,6 @@
 }
 
 .banner__contents {
-    margin-left: 30px;
     padding-top: 140px;
     height: 310px;
 }
